@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /* 
- * $Id: sendsize.c,v 1.171.2.1 2006/09/22 11:51:32 martinea Exp $
+ * $Id: sendsize.c,v 1.171.2.2 2006/11/21 20:08:29 martinea Exp $
  *
  * send estimated backup sizes using dump
  */
@@ -140,6 +140,7 @@ main(
     char *qamdevice = NULL;
     char *conffile;
     char *amandates_file;
+    int   amandates_read = 0;
 #if defined(USE_DBMALLOC)
     unsigned long malloc_hist_1, malloc_size_1;
     unsigned long malloc_hist_2, malloc_size_2;
@@ -181,10 +182,6 @@ main(
 
     /* handle all service requests */
 
-    amandates_file = client_getconf_str(CLN_AMANDATES);
-    if(!start_amandates(amandates_file, 0))
-        error("error [opening %s: %s]", amandates_file, strerror(errno));
-
     for(; (line = agets(stdin)) != NULL; free(line)) {
 	if (line[0] == '\0')
 	    continue;
@@ -224,6 +221,14 @@ main(
 	    }
 
 	    continue;
+	}
+
+	if (amandates_read == 0) {
+	    amandates_file = client_getconf_str(CLN_AMANDATES);
+	    if(!start_amandates(amandates_file, 0))
+	        error("error [opening %s: %s]", amandates_file,
+		      strerror(errno));
+	    amandates_read = 1;
 	}
 
 	s = line;
